--- a/src/css/apps/user/mediaplayer.css
+++ b/src/css/apps/user/mediaplayer.css
@@ -1,7 +1,10 @@
-/* #MediaPlayer:not(.maximized) {
-  width: fit-content !important;
-  height: fit-content !important;
-} */
+@import url("./mediaplayer/file.css");
+@import url("./mediaplayer/queue.css");
+@import url("./mediaplayer/player.css");
+@import url("./mediaplayer/controls.css");
+@import url("./mediaplayer/bar.css");
+@import url("./mediaplayer/nofile.css");
+@import url("./mediaplayer/popup.css");
 
 #MediaPlayer > div.body {
   transition: none !important;
@@ -31,344 +34,4 @@
 
 #MediaPlayer.fullscreen > div.body > div.container.hide-controls {
   cursor: none;
-}
-
-#MediaPlayer.fullscreen > div.body > div.container div.file {
-  font-size: 26px;
-  font-weight: bold;
-}
-
-#MediaPlayer.fullscreen > div.body > div.container div.file img {
-  height: 48px;
-}
-
-#MediaPlayer > div.body > div.queue {
-  width: 200px;
-  height: 100%;
-  border-left: var(--win-border);
-  padding: 10px;
-  padding-right: 2px;
-  overflow-y: scroll;
-}
-
-#MediaPlayer.fullscreen > div.body > div.queue {
-  display: none;
-}
-
-#MediaPlayer > div.body > div.queue > div {
-  display: flex;
-  align-items: center;
-  gap: 5px;
-  width: 100%;
-  padding: 5px;
-  background-color: transparent;
-  margin-bottom: 5px;
-  border-radius: 8px;
-}
-
-#MediaPlayer > div.body > div.queue > div:hover {
-  background-color: var(--button-glass-bg);
-}
-
-#MediaPlayer > div.body > div.queue > div:active {
-  background-color: var(--button-glass-active-bg);
-}
-
-#MediaPlayer > div.body > div.queue > div.selected {
-  background-color: var(--accent-transparent);
-}
-
-#MediaPlayer > div.body > div.queue > div > span.lucide {
-  width: 24px;
-  height: 24px;
-  font-size: 16px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-width: 24px;
-}
-
-#MediaPlayer > div.body > div.queue > div > span.name {
-  white-space: nowrap;
-  max-width: calc(100% - 29px);
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-#MediaPlayer > div.body > div.queue > div button.lucide {
-  width: 24px;
-  height: 24px;
-  font-size: 16px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0;
-  margin-left: auto;
-  background-color: transparent;
-  min-width: 24px;
-}
-
-#MediaPlayer > div.body > div.queue > div:not(:hover) button.lucide {
-  display: none;
-}
-
-#MediaPlayer div.video-wrapper,
-#MediaPlayer div.audio-visual {
-  flex-grow: 1;
-  max-height: calc(100% - 90px);
-  background-color: var(--button-glass-active-bg);
-  border-radius: 0;
-  border-bottom: var(--win-border);
-  /* height: 350px; */
-  height: 100%;
-  /* aspect-ratio: 16/9; */
-  position: relative;
-  overflow: hidden;
-}
-
-#MediaPlayer div.video-wrapper video {
-  height: 100%;
-  max-width: 100%;
-}
-
-#MediaPlayer.fullscreen div.video-wrapper,
-#MediaPlayer.fullscreen div.audio-visual {
-  width: 100%;
-  height: 100%;
-  max-height: unset;
-  box-shadow: none;
-  border-radius: 0;
-  border-bottom: var(--win-border);
-  background-color: #000;
-  margin-bottom: 15px;
-  display: flex;
-}
-
-#MediaPlayer.fullscreen div.audio-visual {
-  background: linear-gradient(to bottom, #0008 0%, #0008 100%), var(--wallpaper);
-  background-position: center;
-  background-size: cover;
-}
-
-#MediaPlayer video {
-  pointer-events: none;
-  margin: 0 auto;
-}
-
-#MediaPlayer > div.body div.controls {
-  display: flex;
-  gap: 10px;
-  align-items: center;
-  padding: 15px;
-}
-
-#MediaPlayer.fullscreen > div.body div.controls {
-  padding: 15px;
-  transition: margin-bottom 0.3s;
-}
-
-#MediaPlayer.fullscreen > div.body div.hide-controls div.controls {
-  margin-bottom: -93px;
-}
-
-#MediaPlayer.fullscreen > div.body div.container:not(.hide-controls) div.video-wrapper {
-  height: calc(100% - 93px) !important;
-}
-
-#MediaPlayer > div.body div.controls button {
-  border-radius: 0;
-  width: 40px;
-  height: 40px;
-  margin: 0;
-  font-size: 20px;
-  padding: 0;
-  box-shadow: none;
-  min-width: unset;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-#MediaPlayer > div.body div.controls button.fullscreen-toggle {
-  width: 30px;
-  height: 30px;
-  border-radius: 8px;
-  /* background-color: transparent; */
-  font-size: 16px;
-  margin-left: 5px;
-}
-
-#MediaPlayer > div.body div.controls button.previous,
-#MediaPlayer > div.body div.controls button.next,
-#MediaPlayer > div.body div.controls button.forward,
-#MediaPlayer > div.body div.controls button.reverse {
-  width: 30px;
-  height: 30px;
-  background-color: transparent;
-}
-
-#MediaPlayer > div.body div.controls button.stop {
-  width: 26px;
-  height: 26px;
-  font-size: 14px;
-  background-color: transparent;
-}
-#MediaPlayer > div.body div.controls button.previous,
-#MediaPlayer > div.body div.controls button.next {
-  font-size: 16px;
-  background-color: transparent;
-}
-
-#MediaPlayer > div.body div.controls button.previous::before,
-#MediaPlayer > div.body div.controls button.next::before {
-  height: 16px;
-}
-
-#MediaPlayer > div.body div.controls div.group {
-  display: flex;
-  border-radius: var(--button-border-rad);
-  overflow: hidden;
-  gap: 10px;
-}
-
-#MediaPlayer > div.body div.controls div.timestamp {
-  margin-left: auto;
-}
-
-#MediaPlayer > div.body div.bar {
-  margin: 0 15px;
-  width: calc(100% - 30px);
-  margin-top: 15px;
-  height: 7px;
-  background-color: var(--button-glass-bg);
-  border-radius: 3.5px;
-  border: var(--button-glass-bg) 1px solid;
-  overflow: hidden;
-  min-height: 7px;
-}
-
-#MediaPlayer > div.body div.bar.bounce div.inner {
-  width: 20%;
-  animation: bounce 1.5s infinite;
-}
-
-@keyframes bounce {
-  0% {
-    translate: 0%;
-  }
-
-  50% {
-    translate: 400%;
-  }
-
-  100% {
-    translate: 0;
-  }
-}
-
-#MediaPlayer > div.body div.bar div.inner {
-  height: 5px;
-  width: var(--w);
-  background-color: var(--accent);
-  border-radius: 2.5px;
-}
-
-#MediaPlayer.fullscreen > div.body div.bar {
-  margin-top: 0;
-}
-
-#MediaPlayer > div.body div.file {
-  display: flex;
-  gap: 10px;
-  align-items: center;
-}
-
-#MediaPlayer > div.body div.file img {
-  height: 24px;
-}
-
-#MediaPlayer > div.body div.video-wrapper {
-  display: none;
-  justify-content: center;
-  align-items: center;
-  transition: height 0.3s;
-}
-
-#MediaPlayer > div.body div.video-wrapper.show {
-  display: flex;
-}
-
-#MediaPlayer div.audio-visual {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-#MediaPlayer div.audio-visual div.file {
-  width: 100%;
-  padding: 10px;
-  margin-top: auto;
-}
-
-#MediaPlayer div.audio-visual > span {
-  background-color: var(--button-glass-bg);
-  text-align: center;
-  line-height: 64px;
-  font-size: 40px;
-  border-radius: 50%;
-  width: 64px;
-  height: 64px;
-  margin-top: auto;
-  translate: 0 22px;
-}
-#MediaPlayer.fullscreen div.audio-visual {
-  align-items: start;
-  justify-content: end;
-  padding: 30px;
-  gap: 30px;
-}
-
-#MediaPlayer.fullscreen div.audio-visual > div.file,
-#MediaPlayer.fullscreen div.audio-visual > span {
-  margin-top: 0;
-  translate: none;
-}
-
-#MediaPlayer.fullscreen div.audio-visual > span {
-  border-radius: 8px;
-  width: 128px;
-  height: 128px;
-  line-height: 128px;
-  background-color: var(--accent-transparent);
-  border: var(--button-glass-hover-bg) 1px solid;
-  backdrop-filter: blur(10px);
-}
-
-#MediaPlayer.fullscreen div.audio-visual > div.file {
-  margin-top: 0;
-  padding: 0;
-}
-
-#MediaPlayer div.no-file {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-#MediaPlayer div.no-file img {
-  height: 48px;
-  margin-bottom: 20px;
-}
-
-#MediaPlayer div.no-file p {
-  margin: 0;
-  opacity: 0.5;
-  max-width: 70%;
-  text-align: center;
 }
