--- a/src/css/apps/components/messagebox.css
+++ b/src/css/apps/components/messagebox.css
@@ -27,6 +27,10 @@
   height: 40px;
 }
 
+#messageBox div.top div.right {
+  max-width: calc(100% - 60px);
+}
+
 #messageBox div.top h1 {
   margin-top: 0;
   white-space: nowrap;
