--- a/src/css/themes/light.css
+++ b/src/css/themes/light.css
@@ -23,16 +23,28 @@
   --button-glass-active-bg: rgba(0, 0, 0, 0.1);
   --clr-red-bg: #ffc5c5;
   --clr-red-fg: #c50000;
+  --clr-red-bright-fg: #ff1717;
   --clr-green-bg: #92ff8f;
   --clr-green-fg: #299126;
+  --clr-green-bright-fg: #48ff43;
   --clr-yellow-bg: #ffecaa;
   --clr-yellow-fg: #a58b2f;
+  --clr-yellow-bright-fg: #ffd749;
   --clr-orange-bg: #ffe1b5;
   --clr-orange-fg: #af7011;
+  --clr-orange-bright-fg: #ffa319;
   --clr-blue-bg: #8fd0ff;
   --clr-blue-fg: #1566a0;
+  --clr-blue-bright-fg: #58b9ff;
   --clr-aqua-bg: #ddfff3;
   --clr-aqua-fg: #39a17d;
+  --clr-aqua-bright-fg: #5affc6;
+  --clr-magenta-bg: #f08fff;
+  --clr-magenta-fg: #8d15a0;
+  --clr-magenta-bright-fg: #e121ff;
+  --clr-purple-bg: #c7a4ff;
+  --clr-purple-fg: #6139a1;
+  --clr-purple-bright-fg: #995aff;
   --accent-darken: brightness(0.7);
   --secondary-border: var(--win-bg) 1px solid;
   --secondary-box-shadow: none;
