--- a/src/css/apps/components/terminalwindow.css
+++ b/src/css/apps/components/terminalwindow.css
@@ -2,6 +2,9 @@
   padding: 0;
   border-top: none;
   background-color: transparent;
+  margin: 5px 10px;
+  width: calc(100% - 20px);
+  height: calc(100% - 10px - 40px);
 }
 
 #TerminalWindow {
