Update TerminalWindow colors

--- a/src/css/apps/components/terminalwindow.css
+++ b/src/css/apps/components/terminalwindow.css
@@ -10,6 +10,15 @@
 #TerminalWindow {
   background-color: #000d;
 }
+
+#TerminalWindow:not(.focused) {
+  background-color: #000;
+}
+
+.theme-light #TerminalWindow:not(.focused) {
+  background-color: #fff;
+}
+
 .theme-light #TerminalWindow {
   background-color: #fffd;
 }
