--- a/src/css/apps/components/shell/actioncenter.css
+++ b/src/css/apps/components/shell/actioncenter.css
@@ -13,7 +13,7 @@ div.shell div.actioncenter {
   border-radius: 10px;
   border: var(--border);
   max-height: 100%;
-  translate: 400px 0;
+  translate: 420px 0;
   opacity: 0;
   transition: translate 0.3s, opacity 0.2s;
   backdrop-filter: blur(var(--blur));
@@ -22,6 +22,15 @@ div.shell div.actioncenter {
   display: flex;
   flex-direction: column;
   gap: 10px;
+}
+
+div.shell.docked div.actioncenter {
+  top: 0;
+  right: 0;
+  height: 100%;
+  border: none;
+  border-left: var(--border);
+  border-radius: 0;
 }
 
 div.shell div.actioncenter.opened {
