--- a/src/css/apps/components/wallpaper.css
+++ b/src/css/apps/components/wallpaper.css
@@ -67,6 +67,16 @@ div.desktop-wallpaper > div.wallpaper:not(.show) {
   left: var(--left);
 }
 
+#wallpaper div.desktop-icons div.ghost p {
+  margin: 0;
+  height: fit-content;
+  max-height: 2.6em;
+  text-shadow: #000 1px 1px 0;
+  color: #eee;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 #wallpaper div.desktop-icons div.img {
   position: relative;
   width: 32px;
@@ -92,8 +102,8 @@ div.desktop-wallpaper > div.wallpaper:not(.show) {
   margin: 0;
   height: fit-content;
   max-height: 2.6em;
-  text-shadow: #000 0 0 5px;
-  color: white;
+  text-shadow: #000 -1px -1px 2px, #000 -1px 1px 2px, #000 1px -1px 2px, #000 1px 1px 2px;
+  color: #eee;
   overflow: hidden;
   text-overflow: ellipsis;
 }
@@ -109,6 +119,8 @@ div.desktop-wallpaper > div.wallpaper:not(.show) {
 #wallpaper div.desktop-icons button.selected {
   background-color: var(--accent-transparent);
   min-height: fit-content !important;
+  z-index: 1000;
+  backdrop-filter: blur(2px);
 }
 
 #wallpaper div.desktop-icons button.selected p {
