--- a/src/css/apps/components/wallpaper.css
+++ b/src/css/apps/components/wallpaper.css
@@ -33,6 +33,10 @@ div.desktop-wallpaper > div.wallpaper:not(.show) {
   z-index: 1000000000000000000000000000000;
 }
 
+#wallpaper div.desktop-icons.hide {
+  display: none !important;
+}
+
 #wallpaper div.desktop-icons div.ghost,
 #wallpaper div.desktop-icons button {
   height: fit-content;
