--- a/src/css/apps/components/shell/contextmenu.css
+++ b/src/css/apps/components/shell/contextmenu.css
@@ -12,6 +12,7 @@
   border-radius: var(--win-border-rad);
   box-sizing: border-box;
   padding: 5px;
+  transition: all 0.2s, top 0s, left 0s, pointer-events 0s;
   display: flex;
   flex-direction: column;
   transform-origin: top center;
@@ -41,11 +42,10 @@
   visibility: visible;
   transform: scaleY(100%);
   pointer-events: initial !important;
-  transition: all 0.2s, top 0s, left 0s, pointer-events 0s;
 }
 
-#arcShell div.context-menu:not(.show) * {
-  display: none;
+#arcShell div.context-menu:not(.show) div.sub-items {
+  display: none !important;
 }
 
 #arcShell div.context-menu button.menu-item {
@@ -56,12 +56,12 @@
   background-color: transparent;
   color: var(--fg);
   border-radius: var(--button-border-rad);
-  padding: 5px;
+  padding: 0 5px;
   line-height: 18px;
   transform: unset;
   position: relative;
   z-index: 1;
-  height: 30px;
+  height: 28px;
 }
 
 #arcShell div.context-menu button.menu-item:disabled {
@@ -86,7 +86,7 @@
 
 #arcShell div.context-menu.colored button.menu-item:hover {
   background-color: var(--accent-light-transparent);
-  box-shadow: 0 1px 2px 1px #0000001c;
+  /* box-shadow: 0 1px 2px 1px #0000001c; */
 }
 
 #arcShell div.context-menu button.menu-item.subitems {
