--- a/src/css/apps/user/filemanager/bottom.css
+++ b/src/css/apps/user/filemanager/bottom.css
@@ -6,13 +6,13 @@
   align-items: center;
   padding: 0 10px;
   padding-left: 15px;
+  gap: 10px;
 }
 
 #fileManager > div.body div.bottom > div {
   display: flex;
   align-items: center;
   gap: 5px;
-  margin-left: auto;
 }
 
 #fileManager > div.body div.bottom div.view-toggle button {
@@ -38,4 +38,41 @@
 
 #fileManager > div.body div.bottom.save {
   gap: 10px;
+}
+
+#fileManager > div.body div.bottom div.notice {
+  height: 30px;
+  padding: 0 10px;
+  padding-left: 6px;
+  border-radius: 10px;
+  background-color: var(--clr-red-fg);
+  color: var(--win-bg);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  display: block;
+}
+
+#fileManager > div.body div.bottom div.notice * {
+  color: inherit;
+  vertical-align: middle;
+  line-height: 30px;
+}
+#fileManager > div.body div.bottom div.notice.warning {
+  background-color: var(--clr-orange-fg);
+}
+/* 
+#fileManager > div.body div.bottom div.notice span:not(.lucide) {
+  font-weight: bold;
+} */
+
+#fileManager > div.body div.bottom div.notice span.lucide {
+  display: inline-block;
+  margin-right: 6px;
+  font-size: 18px;
+}
+
+#fileManager > div.body div.bottom div.stat {
+  min-width: fit-content;
+  margin-right: auto;
 }
