--- a/src/css/apps/components/iteminfo.css
+++ b/src/css/apps/components/iteminfo.css
@@ -25,8 +25,11 @@
   margin-right: 5px;
 }
 
-#ItemInfo > div.body div.header button.lucide {
+#ItemInfo > div.body div.header button {
   margin-left: auto;
+}
+
+#ItemInfo > div.body div.header button.lucide {
   width: 32px;
   height: 32px;
   padding: 0;
