--- a/src/css/apps/user/bughunt.css
+++ b/src/css/apps/user/bughunt.css
@@ -34,7 +34,7 @@
   padding: 10px;
   padding-right: 2px;
   overflow-y: scroll;
-  height: calc(100% - 40px);
+  height: calc(100% - 40px - 52px);
 }
 #BugHunt > div.body div.sidebar div.selector > button {
   text-align: left;
@@ -82,9 +82,86 @@
   color: var(--accent-lighter);
 }
 
+#BugHunt > div.body div.sidebar div.account {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 0 10px;
+  height: 52px;
+}
+
+#BugHunt > div.body div.sidebar div.account p {
+  opacity: 0.5;
+  font-size: 12px;
+}
+
 #BugHunt > div.body > div.container {
   width: calc(100% - 250px);
   max-width: calc(100% - 250px);
   border-left: var(--win-border);
   background-color: var(--win-bg);
+}
+#BugHunt > div.body > div.container.full {
+  width: 100%;
+  max-width: 100%;
+}
+
+#BugHunt > div.body > div.container > div.titlebar {
+  border-bottom: var(--win-border);
+}
+
+#BugHunt > div.body > div.container > div.report-content {
+  height: calc(100% - 40px - 51px);
+  padding: 15px;
+}
+
+#BugHunt > div.body > div.container > div.report-content > h1 {
+  font-size: 18px;
+}
+
+#BugHunt > div.body > div.container > div.report-content > p {
+  opacity: 0.5;
+  margin-bottom: 15px;
+}
+
+#BugHunt > div.body > div.container div.actionbar {
+  height: 51px;
+  border-top: var(--win-border);
+}
+
+#BugHunt > div.body > div.container div.center-notice {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+
+#BugHunt > div.body > div.container div.center-notice img {
+  height: 84px;
+  margin-bottom: 10px;
+}
+
+#BugHunt > div.body > div.container div.center-notice h1 {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+#BugHunt > div.body > div.container div.center-notice p {
+  max-width: 300px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+#BugHunt > div.body div.info-block + div.info-block {
+  margin-top: 15px;
+}
+
+#BugHunt > div.body div.spinner-wrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
