--- a/src/css/apps/user/bughunt.css
+++ b/src/css/apps/user/bughunt.css
@@ -1,3 +1,7 @@
+@import url("./bughunt/sidebar.css");
+@import url("./bughunt/container.css");
+@import url("./bughunt/actionbar.css");
+
 #BugHunt > div.body {
   padding: 0;
   display: flex;
@@ -5,157 +9,6 @@
 
 #BugHunt > div.body > div {
   height: 100%;
-}
-#BugHunt > div.body > div.sidebar {
-  max-width: 250px;
-  width: 250px;
-}
-
-#BugHunt > div.body div.sidebar div.tabs {
-  padding: 10px;
-  padding-bottom: 0;
-  display: flex;
-  align-items: end;
-  gap: 10px;
-  border-bottom: var(--accent-lighter) 1px solid;
-  height: 40px;
-}
-
-#BugHunt > div.body div.sidebar div.tabs > button {
-  font-weight: normal;
-  min-width: unset;
-  border-bottom-left-radius: 0;
-  border-bottom-right-radius: 0;
-  height: 28px;
-  padding: 0 15px;
-}
-
-#BugHunt > div.body div.sidebar div.selector {
-  padding: 10px;
-  padding-right: 2px;
-  overflow-y: scroll;
-  height: calc(100% - 40px - 52px);
-}
-#BugHunt > div.body div.sidebar div.selector > button {
-  text-align: left;
-  width: 100%;
-  background-color: transparent;
-  padding: 5px 7px;
-  display: flex;
-  align-items: start;
-  gap: 15px;
-  margin-bottom: 5px;
-}
-
-#BugHunt > div.body div.sidebar div.selector > button:hover {
-  background-color: var(--button-glass-bg);
-}
-
-#BugHunt > div.body div.sidebar div.selector > button.selected {
-  background-color: var(--accent-transparent);
-}
-
-#BugHunt > div.body div.sidebar div.selector > button * {
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
-}
-
-#BugHunt > div.body div.sidebar div.selector > button p {
-  opacity: 0.5;
-  font-size: 12px;
-}
-
-#BugHunt > div.body div.sidebar div.selector > button h1 {
-  height: 16px;
-  line-height: 16px;
-  margin-bottom: 5px;
-}
-
-#BugHunt > div.body div.sidebar div.selector > button > div {
-  max-width: calc(100% - 16px - 15px);
-}
-
-#BugHunt > div.body div.sidebar div.selector > button span.lucide {
-  font-size: 16px;
-  height: 16px;
-  color: var(--accent-lighter);
-}
-
-#BugHunt > div.body div.sidebar div.account {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  padding: 0 10px;
-  height: 52px;
-}
-
-#BugHunt > div.body div.sidebar div.account p {
-  opacity: 0.5;
-  font-size: 12px;
-}
-
-#BugHunt > div.body > div.container {
-  width: calc(100% - 250px);
-  max-width: calc(100% - 250px);
-  border-left: var(--win-border);
-  background-color: var(--win-bg);
-}
-#BugHunt > div.body > div.container.full {
-  width: 100%;
-  max-width: 100%;
-}
-
-#BugHunt > div.body > div.container > div.titlebar {
-  border-bottom: var(--win-border);
-}
-
-#BugHunt > div.body > div.container > div.report-content {
-  height: calc(100% - 40px - 51px);
-  padding: 15px;
-}
-
-#BugHunt > div.body > div.container > div.report-content > h1 {
-  font-size: 18px;
-}
-
-#BugHunt > div.body > div.container > div.report-content > p {
-  opacity: 0.5;
-  margin-bottom: 15px;
-}
-
-#BugHunt > div.body > div.container div.actionbar {
-  height: 51px;
-  border-top: var(--win-border);
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 10px;
-}
-
-#BugHunt > div.body > div.container div.center-notice {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  width: 100%;
-  height: 100%;
-}
-
-#BugHunt > div.body > div.container div.center-notice img {
-  height: 84px;
-  margin-bottom: 10px;
-}
-
-#BugHunt > div.body > div.container div.center-notice h1 {
-  font-size: 18px;
-  margin-bottom: 10px;
-}
-
-#BugHunt > div.body > div.container div.center-notice p {
-  max-width: 300px;
-  text-align: center;
-  margin-bottom: 20px;
 }
 
 #BugHunt > div.body div.info-block + div.info-block {
@@ -168,40 +21,4 @@
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-#BugHunt > div.body > div.container div.actionbar button.create {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  color: var(--accent-darkest);
-  font-weight: normal;
-  padding-left: 10px;
-}
-
-#BugHunt > div.body > div.container div.actionbar button.create * {
-  color: inherit;
-}
-
-#BugHunt > div.body > div.container div.actionbar button.create span.lucide {
-  font-size: 16px;
-}
-
-#BugHunt > div.body > div.container div.actionbar button.lucide {
-  width: 30px;
-  height: 30px;
-  padding: 0;
-  font-size: 16px;
-}
-
-#BugHunt > div.body > div.container div.actionbar div.sep {
-  width: 1px;
-  height: 20px;
-  background-color: var(--button-glass-hover-bg);
-}
-
-#BugHunt > div.body > div.container div.actionbar > div {
-  display: flex;
-  align-items: center;
-  gap: 10px;
 }
