Continue working on bughunt actionbar

--- a/src/css/apps/user/bughunt.css
+++ b/src/css/apps/user/bughunt.css
@@ -1,6 +1,7 @@
 @import url("./bughunt/sidebar.css");
 @import url("./bughunt/container.css");
 @import url("./bughunt/actionbar.css");
+@import url("./bughunt/creator.css");
 
 #BugHunt > div.body {
   padding: 0;
