Add viewing logs to bughunt app

--- a/src/css/apps/user/bughunt.css
+++ b/src/css/apps/user/bughunt.css
@@ -2,6 +2,7 @@
 @import url("./bughunt/container.css");
 @import url("./bughunt/actionbar.css");
 @import url("./bughunt/creator.css");
+@import url("./bughunt/logging.css");
 
 #BugHunt > div.body {
   padding: 0;
