--- a/src/css/apps/user/bughunt/container/reportcontent.css
+++ b/src/css/apps/user/bughunt/container/reportcontent.css
@@ -1,6 +1,7 @@
 #BugHunt > div.body > div.container > div.report-content {
   height: calc(100% - 40px - 51px);
   padding: 15px;
+  overflow-y: auto;
 }
 
 #BugHunt > div.body > div.container > div.report-content > h1 {
