Add showHiddenApps to settings apps page

--- a/src/css/apps/user/settings.css
+++ b/src/css/apps/user/settings.css
@@ -7,6 +7,7 @@
 @import url("./settings/page/security.css");
 @import url("./settings/page/loginbackground.css");
 @import url("./settings/page/about.css");
+@import url("./settings/page/apps.css");
 @import url("./settings/overlay/savetheme.css");
 @import url("./settings/overlay/changeusername.css");
 @import url("./settings/overlay/changepassword.css");
