--- a/src/css/main.css
+++ b/src/css/main.css
@@ -14,6 +14,7 @@
 @import url("./state/desktop.css");
 @import url("./state/licensedeclined.css");
 @import url("./state/serverdown.css");
+@import url("./state/turnedoff.css");
 
 html,
 body {
