--- a/src/css/window/titlebar.css
+++ b/src/css/window/titlebar.css
@@ -40,3 +40,13 @@ div.window > div.body div.titlebar.custom div.window-title > span {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+div.window > div.titlebar button.feedback {
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  text-decoration: underline;
+  color: var(--accent-lighter);
+  margin-left: auto;
+}
