Blurring changes to hopefully help Webkit

--- a/src/css/apps/components/shell/startmenu.css
+++ b/src/css/apps/components/shell/startmenu.css
@@ -12,6 +12,7 @@ div.shell div.startmenu {
   border: var(--border);
   max-height: 100%;
   backdrop-filter: blur(var(--blur));
+  -webkit-backdrop-filter: blur(var(--blur));
   box-shadow: 0 5px 15px 5px #0003;
   padding: 10px;
 }
