--- a/src/css/apps/components/shell/actioncenter.css
+++ b/src/css/apps/components/shell/actioncenter.css
@@ -17,11 +17,13 @@ div.shell div.actioncenter {
   opacity: 0;
   transition: translate 0.3s, opacity 0.2s;
   backdrop-filter: blur(var(--blur));
+  -webkit-backdrop-filter: blur(var(--blur));
   box-shadow: 0 5px 15px 5px #0003;
   padding: 10px;
   display: flex;
   flex-direction: column;
   gap: 10px;
+  position: relative;
 }
 
 div.shell.docked div.actioncenter {
