add Invocation Policy to bughunt creator

--- a/src/css/apps/components/shell/actioncenter/notifications.css
+++ b/src/css/apps/components/shell/actioncenter/notifications.css
@@ -111,6 +111,11 @@ div.shell div.actioncenter div.notification img.icon {
   height: 48px;
 }
 
+div.shell div.actioncenter div.notification div.left span.lucide {
+  font-size: 32px;
+  color: var(--accent-lighter);
+}
+
 div.shell div.actioncenter div.notification.deleted {
   display: none;
 }
