--- a/src/css/apps/user/messages.css
+++ b/src/css/apps/user/messages.css
@@ -217,6 +217,7 @@
   width: 40px;
   height: 40px;
   border-radius: 20px;
+  object-fit: cover;
 }
 
 #Messages > div.body div.container div.message-content p.message-body {
@@ -337,4 +338,11 @@
 #Messages > div.body div.container div.center-notice h1 {
   margin-bottom: 5px;
   font-size: 16px;
+}
+#arcShell .actioncenter .notification.incoming-message img.icon,
+#arcShell .push-notification.incoming-message img.icon {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  object-fit: cover;
 }
