--- a/src/css/apps/admin/adminportal/sidebar.css
+++ b/src/css/apps/admin/adminportal/sidebar.css
@@ -1,22 +1,27 @@
 #AdminPortal > div.body div.sidebar {
   height: 100%;
-  width: 200px;
+  width: 150px;
+  padding: 0;
   border-right: var(--win-border);
   overflow-y: scroll;
-  padding: 10px;
-  padding-right: 2px;
+  /* padding: 10px; */
+  /* padding-right: 2px; */
+}
+
+#AdminPortal > div.body div.sidebar::-webkit-scrollbar {
+  display: none;
 }
 
 #AdminPortal > div.body div.sidebar button {
   width: 100%;
-  height: 30px;
+  height: 36px;
   text-align: left;
   display: flex;
   align-items: center;
-  gap: 15px;
-  padding: 0 7px;
-  margin-bottom: 5px;
+  gap: 10px;
+  padding: 0 10px;
   background-color: transparent;
+  border-radius: 0;
 }
 
 #AdminPortal > div.body div.sidebar button.selected {
@@ -29,7 +34,6 @@
 }
 
 #AdminPortal > div.body div.sidebar hr {
-  margin: 8px 0;
   /* margin-bottom: 8px; */
   border: none;
   border-top: var(--button-glass-bg) 1px solid;
@@ -44,8 +48,10 @@
 }
 
 #AdminPortal > div.body div.sidebar section h1 {
-  opacity: 0.5;
-  padding: 5px 7px;
+  padding: 10px 38px;
+  border-bottom: var(--button-glass-bg) 1px solid;
+  height: 40px;
+  margin-bottom: 5px;
 }
 
 #AdminPortal > div.body div.sidebar section + section {
